impr: CreateScaleUseCase