@@ -6,17 +6,14 @@ import com.labi.schedulerjava.core.domain.exception.BusinessRuleException;
 import com.labi.schedulerjava.core.domain.model.*;
 import com.labi.schedulerjava.core.domain.service.*;
 import com.labi.schedulerjava.core.usecases.UseCase;
-import com.labi.schedulerjava.dtos.ReadScaleDto;
-import com.labi.schedulerjava.dtos.ReadSimpScheduleDto;
-import com.labi.schedulerjava.dtos.ReadSimpVolunteerDto;
-import com.labi.schedulerjava.dtos.ReadVolunteerMinistry;
+import com.labi.schedulerjava.dtos.*;
 import lombok.Value;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Component
 public class CreateScaleUseCase extends UseCase<CreateScaleUseCase.InputValues, CreateScaleUseCase.OutputValues> {
@@ -51,68 +48,83 @@ public class CreateScaleUseCase extends UseCase<CreateScaleUseCase.InputValues, 
         Ministry ministry = ministryService.findById(input.getMinistryId())
                 .orElseThrow(() -> new BusinessRuleException("O ID " + input.getMinistryId() + " não corresponde a um ministério cadastrado"));
 
-        List<Volunteer> volunteers = volunteerService.findAll(ministry.getId());
-        List<Volunteer> availableVolunteers = new ArrayList<>();
-        for (Volunteer volunteer : volunteers) {
-            if (volunteerMinistryService.validateVolunteerMinistry(volunteer.getId(), ministry.getId()).getIsActive()) {
-                if (!unavailableDateService.isUnavailableDate(schedule.getStartDate(), schedule.getEndDate(), volunteer.getId())) {
-                    availableVolunteers.add(volunteer);
-                }
-            }
-        }
+        List<Volunteer> allVolunteers = volunteerService.findAll(ministry.getId());
+        List<Volunteer> availableVolunteers = filterAvailableVolunteers(allVolunteers, schedule, ministry.getId());
 
-        availableVolunteers.forEach(volunteer -> {
-            if (volunteer.getGroup() != null) {
-                volunteer.getGroup().getVolunteers().forEach(groupVolunteer -> {
-                    if (!unavailableDateService.isUnavailableDate(schedule.getStartDate(), schedule.getEndDate(), groupVolunteer.getId())) {
-                        availableVolunteers.add(groupVolunteer);
-                    } else {
-                        if (availableVolunteers.contains(groupVolunteer)) {
-                            availableVolunteers.remove(groupVolunteer);
-                        }
-                        availableVolunteers.remove(volunteer);
-                    }
-                });
-            }
-        });
+        List<Volunteer> selectedVolunteers = selectVolunteersConsideringGroups(availableVolunteers,
+                input.getMaxVolunteers(), ministry.getId(), schedule);
 
-        Random random = new Random();
-
-        List<Volunteer> selectedVolunteers = new ArrayList<>();
-        for (int i = 0; i < input.getMaxVolunteers() && i < availableVolunteers.size(); i++) {
-            Volunteer volunteer = availableVolunteers.get(random.nextInt(availableVolunteers.size()));
-            if (!selectedVolunteers.contains(volunteer)) {
-                selectedVolunteers.add(volunteer);
-            }
-        }
-
-        Scale scale = new Scale(input.maxVolunteers, schedule, user);
+        Scale scale = new Scale(input.maxVolunteers, schedule, ministry, user);
         scaleRepository.save(scale);
 
-        return new OutputValues(new ReadScaleDto(
-                scale.getId(),
-                scale.getMaxVolunteers(),
-                new ReadSimpScheduleDto(
-                        schedule.getId(),
-                        schedule.getName(),
-                        schedule.getStartDate(),
-                        schedule.getEndDate(),
-                        schedule.getWeekNumber(),
-                        schedule.getIsActive()
-                ),
-                selectedVolunteers.stream()
-                        .map(volunteer -> new ReadSimpVolunteerDto(
-                                volunteer.getId(),
-                                volunteer.getAccessKey(),
-                                volunteer.getName(),
-                                volunteer.getLastName(),
-                                volunteer.getCpf(),
-                                volunteer.getPhone(),
-                                volunteer.getBirthDate(),
-                                volunteer.getOrigin()
-                        ))
-                        .toList()
-        ));
+        return new OutputValues(selectedVolunteers.stream()
+                .map(volunteer -> new ReadSimpVolunteerDto(
+                        volunteer.getId(),
+                        volunteer.getAccessKey(),
+                        volunteer.getName(),
+                        volunteer.getLastName(),
+                        volunteer.getCpf(),
+                        volunteer.getPhone(),
+                        volunteer.getBirthDate(),
+                        volunteer.getOrigin()
+                ))
+                .collect(Collectors.toList()));
+    }
+
+    private List<Volunteer> filterAvailableVolunteers(List<Volunteer> volunteers, Schedule schedule,
+                                                      Long ministryId) {
+        return volunteers.stream()
+                .filter(volunteer -> volunteerMinistryService.validateVolunteerMinistry(volunteer.getId(),
+                        ministryId).getIsActive())
+                .filter(volunteer -> !unavailableDateService.isUnavailableDate(schedule.getStartDate(),
+                        schedule.getEndDate(), volunteer.getId()))
+                .collect(Collectors.toList());
+    }
+
+    private List<Volunteer> selectVolunteersConsideringGroups(List<Volunteer> availableVolunteers,
+                                                              Long maxVolunteers, Long ministryId,
+                                                              Schedule schedule) {
+        List<Volunteer> selectedVolunteers = new ArrayList<>();
+        Random random = new Random();
+        Set<Long> processedGroups = new HashSet<>();
+
+        availableVolunteers = availableVolunteers.stream()
+                .filter(volunteer -> {
+                    if (volunteer.getGroup() != null) {
+                        if (processedGroups.contains(volunteer.getGroup().getId())) {
+                            return false;
+                        }
+                        boolean allMembersEligible = volunteer.getGroup().getVolunteers().stream()
+                                .allMatch(member -> volunteerMinistryService.isVolunteerInMinistry(member.getId(), ministryId) &&
+                                        !unavailableDateService.isUnavailableDate(schedule.getStartDate(), schedule.getEndDate(), member.getId()));
+
+                        if (!allMembersEligible) {
+                            processedGroups.add(volunteer.getGroup().getId());
+                            return false;
+                        }
+                    }
+                    return true;
+                })
+                .collect(Collectors.toList());
+
+        while (selectedVolunteers.size() < maxVolunteers && !availableVolunteers.isEmpty()) {
+            int index = random.nextInt(availableVolunteers.size());
+            Volunteer randomVolunteer = availableVolunteers.get(index);
+
+            if (randomVolunteer.getGroup() != null && !processedGroups.contains(randomVolunteer.getGroup().getId())) {
+                List<Volunteer> groupMembers = new ArrayList<>(randomVolunteer.getGroup().getVolunteers());
+                if ((selectedVolunteers.size() + groupMembers.size()) <= maxVolunteers) {
+                    selectedVolunteers.addAll(groupMembers);
+                    processedGroups.add(randomVolunteer.getGroup().getId());
+                }
+                availableVolunteers.removeAll(groupMembers);
+            } else if (randomVolunteer.getGroup() == null) {
+                selectedVolunteers.add(randomVolunteer);
+                availableVolunteers.remove(randomVolunteer);
+            }
+        }
+
+        return selectedVolunteers;
     }
 
     @Value
@@ -125,6 +137,6 @@ public class CreateScaleUseCase extends UseCase<CreateScaleUseCase.InputValues, 
 
     @Value
     public static class OutputValues implements UseCase.OutputValues {
-        ReadScaleDto scale;
+        List<ReadSimpVolunteerDto> volunteers;
     }
 }
